[gd_scene load_steps=7 format=3 uid="uid://m3db4n3sq77i"]

[ext_resource type="Script" path="res://gui.gd" id="1_8sup2"]
[ext_resource type="Texture2D" uid="uid://bo0cwvge6xbbo" path="res://sprites/lives.png" id="1_tiuk2"]
[ext_resource type="FontFile" uid="uid://cddfpdutbysnr" path="res://Enchanted Land.otf" id="2_lmobp"]
[ext_resource type="Texture2D" uid="uid://6eeniv6q1ffp" path="res://sprites/pills.png" id="3_um5q7"]
[ext_resource type="Texture2D" uid="uid://duhdoqo51qi6s" path="res://sprites/overlay.png" id="4_jbbcd"]
[ext_resource type="Texture2D" uid="uid://dnqfalcwcxcui" path="res://sprites/fadeout.png" id="5_pdtvs"]

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_8sup2")

[node name="Overlay" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 0, 0.883333, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_jbbcd")

[node name="LivesGui" type="Control" parent="."]
unique_name_in_owner = true
z_index = 1
anchors_preset = 0
offset_top = -98.0
offset_right = 40.0
offset_bottom = -58.0
pivot_offset = Vector2(42.805, 56.935)

[node name="TextureRect" type="TextureRect" parent="LivesGui"]
layout_mode = 2
offset_left = -10.025
offset_top = -25.045
offset_right = 93.975
offset_bottom = 92.955
scale = Vector2(0.391821, 0.391821)
pivot_offset = Vector2(52, 59)
texture = ExtResource("1_tiuk2")

[node name="LivesLabel" type="Label" parent="LivesGui"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
offset_left = 11.465
offset_top = 52.0
offset_right = 74.465
offset_bottom = 170.0
pivot_offset = Vector2(30.725, 0)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_lmobp")
theme_override_font_sizes/font_size = 40
text = "20"
horizontal_alignment = 1

[node name="PointsGui" type="Control" parent="."]
unique_name_in_owner = true
z_index = 1
anchors_preset = 0
offset_top = -98.0
offset_right = 40.0
offset_bottom = -58.0
pivot_offset = Vector2(596, 55)

[node name="TextureRect2" type="TextureRect" parent="PointsGui"]
layout_mode = 2
offset_left = 540.09
offset_top = -23.965
offset_right = 649.09
offset_bottom = 94.035
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.340809, 0.340809)
pivot_offset = Vector2(54, 59)
texture = ExtResource("3_um5q7")

[node name="PointsLabel" type="Label" parent="PointsGui"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
offset_left = 564.0
offset_top = 52.0
offset_right = 627.0
offset_bottom = 170.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_lmobp")
theme_override_font_sizes/font_size = 40
text = "20"
horizontal_alignment = 1

[node name="LevelGui" type="Control" parent="."]
unique_name_in_owner = true
z_index = 1
anchors_preset = 0
offset_top = -98.0
offset_right = 40.0
offset_bottom = -58.0
pivot_offset = Vector2(596, 55)

[node name="LevelLabel" type="Label" parent="LevelGui"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
offset_left = 289.0
offset_top = 20.0
offset_right = 352.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(31.695, 23.82)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_lmobp")
theme_override_font_sizes/font_size = 40
text = "0/2"
horizontal_alignment = 1

[node name="FadeOut" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="CircleOut" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="CircleOut"]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_pdtvs")
stretch_mode = 3

[node name="FadeOut2" type="ColorRect" parent="CircleOut"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10503.0
offset_top = -5124.2
offset_right = -503.0
offset_bottom = 4875.8
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="FadeOut4" type="ColorRect" parent="CircleOut"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10000.0
offset_top = 500.0
offset_right = 10000.0
offset_bottom = 10500.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="FadeOut5" type="ColorRect" parent="CircleOut"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10000.0
offset_top = -10500.0
offset_right = 10000.0
offset_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="FadeOut3" type="ColorRect" parent="CircleOut"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 503.0
offset_top = -5124.2
offset_right = 10503.0
offset_bottom = 4875.8
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="UpperCineBar" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="LowerCineBar" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 440.0
offset_bottom = 480.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)
